fixes css issue where having 3 come bets collapses the buttons

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -130,6 +130,10 @@ fieldset[disabled] .btn-darkest.active {
   opacity: 1;
 }
 
+.point_num_height {
+  min-height: 47px;
+}
+
 .coin_style {
   font-size: 20px;
 }
